Fix info grid height and spacing

--- a/src/components/ShopPage/ItemCards.module.css
+++ b/src/components/ShopPage/ItemCards.module.css
@@ -106,10 +106,10 @@
 
   .info {
     display: grid;
-    grid-template-rows: 6rem 0.4fr 0.3fr 0.2fr;
+    grid-template-rows: auto 2rem 2rem 0.1fr;
     justify-content: space-around;
     flex: 1;
-    padding: 0 0.5rem;
+    padding: 0 1rem;
   }
 
   .price {
